--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -58,7 +58,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: rgb(0, 0, 0);
   text-align: left;
   background-color: #fff;
 }
@@ -1996,6 +1996,8 @@ textarea.form-control {
 
 .form-group {
   margin-bottom: 1rem;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .form-text {
@@ -2022,6 +2024,19 @@ textarea.form-control {
   position: relative;
   display: block;
   padding-left: 1.25rem;
+}
+
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+
+.form-signin input[type="password"] {
+  margin-bottom: 20px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
 .form-check-input {
@@ -2624,9 +2639,9 @@ fieldset:disabled a.btn {
 }
 
 .btn-light {
-  color: #212529;
+  color: #ffffff;
   background-color: #f8f9fa;
-  border-color: #f8f9fa;
+  box-shadow: -1px 2px 13px 1px rgba(0,0,0,0.46);
 }
 
 .btn-light:hover {
@@ -4454,15 +4469,15 @@ input[type="button"].btn-block {
 }
 
 .navbar-light .navbar-brand {
-  color: rgba(0, 0, 0, 0.9);
+  color: rgba(255, 255, 255, 0.9);
 }
 
 .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
-  color: rgba(0, 0, 0, 0.9);
+  color: rgba(255, 255, 255, 0.9);
 }
 
 .navbar-light .navbar-nav .nav-link {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(255, 255, 255, 0.918);
 }
 
 .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
@@ -4555,11 +4570,9 @@ input[type="button"].btn-block {
   display: flex;
   -ms-flex-direction: column;
   flex-direction: column;
-  min-width: 0;
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
 }
 
@@ -4581,7 +4594,7 @@ input[type="button"].btn-block {
 .card-body {
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
-  padding: 1.25rem;
+  padding: 3.25rem;
 }
 
 .card-title {
